lang/tests/derive/sol/ui/fail/02-enum.stderr
error: enums are not supported
 --> $DIR/02-enum.rs:5:1
  |
5 | enum MyEnum {
  | ^^^^
